# scrape-sfu-transcript

./: Cargo.toml  LICENSE  README.md
src/: main.rs
