[package]
name = "scrape-sfu-transcript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.3.0" }
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
