[package]
name = "scrape-sfu-transcript"
version = "0.1.0"
edition = "2021"
description = "A tool for extrcting info from SFU SIMS transcript PDFs."
repository = "https://github.com/nsumner/scrape-sfu-transcript/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
csv = { version = "1.3" }
lopdf = { version = "0.30.0", features = ["pom", "pom_parser"] }
rand = { version = "0.8.5" }
